# warehouse

./: .gitignore  Dockerfile  README.md  babel.cfg  compose.yml  package-lock.json  pyproject.toml
app/: extensions.py  main.py  utils.py
app/base/: models.py  views.py
app/base/templates/: base.css  base.html  base.js
app/migrations/versions/: 0001_initial.py
app/products/: forms.py  models.py  schemas.py  services.py  views.py
app/products/templates/: product_edit.html  product_edit.js  product_list.css  product_list.html  product_list.js
app/translations/: messages.pot
app/translations/pl/LC_MESSAGES/: messages.mo  messages.po
