[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
alembic = "^1.14.0"
babel = "^2.16.0"
flask = "^3.1.0"
flask-babel = "^4.0.0"
flask-marshmallow = "^1.2.1"
flask-migrate = "^4.0.7"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.2"
gunicorn = "^23.0.0"
marshmallow = "^3.23.3"
marshmallow-sqlalchemy = "^1.1.0"
sqlalchemy = "^2.0.36"
wtforms = "^3.2.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.6"

[tool.ruff]
line-length = 99
extend-exclude = ["app/migrations"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100",  # undocumented-public-module
    "D101",  # undocumented-public-class
    "D102",  # undocumented-public-method
    "D103",  # undocumented-public-function
    "D104",  # undocumented-public-package
    "FA102", # future-required-type-annotation
]
fixable = ["ALL"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
